--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 <!DOCTYPE html>
 <head>
   {% if page.url == "/404.html" %}
-  <meta http-equiv="refresh" content="2; url=/">
+  <meta http-equiv="refresh" content="2; url=/leonids/">
   {% endif %}
 </head>
 <body>
